--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -13,14 +13,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "9.1.7",
+    "@angular/cdk": "^9.1.3",
     "@angular/common": "9.1.7",
     "@angular/compiler": "9.1.7",
     "@angular/core": "9.1.7",
     "@angular/forms": "9.1.7",
+    "@angular/material": "^9.1.3",
     "@angular/platform-browser": "9.1.7",
     "@angular/platform-browser-dynamic": "9.1.7",
     "@angular/platform-server": "9.1.7",
     "@angular/router": "9.1.7",
+    "@auth0/angular-jwt": "^5.0.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
