--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "9.1.7",
     "@angular/compiler": "9.1.7",
     "@angular/core": "9.1.7",
+    "@angular/flex-layout": "^9.0.0-beta.30",
     "@angular/forms": "9.1.7",
     "@angular/material": "^9.1.3",
     "@angular/platform-browser": "9.1.7",
